<resources>
    <string name="app_name">FEEIT Courses</string>
    <string name="main_choice">Please choose whether you are a professor or a student</string>
    <string name="professor">Professor</string>
    <string name="student">Student</string>
    <string name="login">Please enter your login credentials below or register if you do not have an account</string>
    <string name="username_hint">Username…</string>
    <string name="password_hint">Password…</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register Now</string>
    <string name="name_surname_hint">Name and surname…</string>
    <string name="academic_year">Academic year:</string>
    <string name="year_one">Year I</string>
    <string name="year_two">Year II</string>
    <string name="year_three">Year III</string>
    <string name="year_four">Year IV</string>
    <string name="expertise">Expertise…</string>
    <string name="confirm_registration">Confirm Registration</string>
    <string name="register">Please register by filling out the required fields below</string>
    <string name="login_landscape">Please enter your login credentials below</string>
    <string name="assign_new_course">Assign New Course</string>
    <string name="professor_courses">Assigned Courses</string>
    <string name="course_id">Course ID…</string>
    <string name="course_title">Course title…</string>
    <string name="course_description">Course description…</string>
    <string name="assign_course">Assign Course</string>
    <string name="course_icon">Course icon</string>
    <string name="available_courses">Available Courses</string>
    <string name="schedule_courses">Schedule Course</string>
    <string name="set_schedule">Set the schedule for course:</string>
    <string name="choose_day">Choose a day for the course</string>
    <string name="schedule_button">Schedule</string>
    <string name="starting_hour">Start Hour…</string>
    <string name="starting_minutes">Start Minutes…</string>
    <string name="ending_hour">End Hour…</string>
    <string name="ending_minutes">End minutes…</string>
    <string name="enroll_course_title">Enroll</string>
    <string name="enrolled_courses">Enrolled Courses</string>
    <string name="schedule_alert">Schedule alert</string>
    <string name="log_out">Log Out</string>
    <string name="schedule_icon">Schedule Icon</string>
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="remove_course_title">Remove Enrolled Course</string>
    <string name="remove_course">Remove</string>
    <string name="attend">Attend</string>
    <string name="answer_survey">Answer Survey</string>
    <string name="attend_course">Attend Course</string>
    <string name="survey_description">Please rate the following topics about today\'s class out of 5</string>
    <string name="subject_importance">How important was today\'s subject for your lectures?</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="professor_readiness">The professor presented the subject well</string>
    <string name="subject_difficulty">The presented subject was hard to understand</string>
    <string name="subject_materials">The presented subject has enough materials for further learning</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="student_icon">Student Icon</string>
    <string name="active_attendance">Active Attendance</string>
    <string name="previous_attendance">Previous Attendance</string>
    <string name="survey_icon">Survey Icon</string>
    <string name="view_surveys">View Surveys</string>
</resources>