<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".RegisterFragment"
        android:background="@color/white"
    >

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/name_surname"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/title_margin"
            android:layout_marginLeft="@dimen/title_margin"
            android:layout_marginRight="@dimen/title_margin"
            android:inputType="text"
            android:hint="@string/name_surname_hint"
            android:autofillHints="name"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/primary_blue"
        />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/username_register"
            app:layout_constraintTop_toBottomOf="@+id/name_surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/title_margin"
            android:layout_marginLeft="@dimen/title_margin"
            android:layout_marginRight="@dimen/title_margin"
            android:inputType="text"
            android:hint="@string/username_hint"
            android:autofillHints="username"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/primary_blue"
        />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/password_register"
            app:layout_constraintTop_toBottomOf="@+id/username_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/title_margin"
            android:layout_marginLeft="@dimen/title_margin"
            android:layout_marginRight="@dimen/title_margin"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:autofillHints="password"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/primary_blue"
        />

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:id="@+id/expertise_register"
            app:layout_constraintTop_toBottomOf="@+id/password_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/title_margin"
            android:layout_marginLeft="@dimen/title_margin"
            android:layout_marginRight="@dimen/title_margin"
            android:inputType="text"
            android:hint="@string/expertise"
            android:autofillHints="name"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/primary_blue"
        />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/academic_year_control"
            app:layout_constraintTop_toBottomOf="@id/expertise_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/title_margin"
            android:layout_marginLeft="@dimen/title_margin"
            android:layout_marginRight="@dimen/title_margin"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
        >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/first_year"
                android:text="@string/year_one"
                android:textSize="@dimen/secondary_text_size"
                android:textColor="@color/black"
            />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/second_year"
                android:text="@string/year_two"
                android:textSize="@dimen/secondary_text_size"
                android:textColor="@color/black"
            />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/third_year"
                android:text="@string/year_three"
                android:textSize="@dimen/secondary_text_size"
                android:textColor="@color/black"
            />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fourth_year"
                android:text="@string/year_four"
                android:textSize="@dimen/secondary_text_size"
                android:textColor="@color/black"
            />

        </RadioGroup>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_registration"
            app:layout_constraintTop_toBottomOf="@+id/academic_year_control"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/title_margin"
            android:layout_marginLeft="@dimen/double_margin"
            android:layout_marginRight="@dimen/double_margin"
            android:text="@string/confirm_registration"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary_blue"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>