<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CourseFragment"
    android:background="@color/white"
>

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/new_course_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/title_margin"
        android:layout_marginLeft="@dimen/title_margin"
        android:layout_marginRight="@dimen/title_margin"
        android:inputType="text"
        android:hint="@string/course_id"
        android:autofillHints="name"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/primary_blue"
    />

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/new_course_title"
        app:layout_constraintTop_toBottomOf="@id/new_course_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/title_margin"
        android:layout_marginLeft="@dimen/title_margin"
        android:layout_marginRight="@dimen/title_margin"
        android:inputType="text"
        android:hint="@string/course_title"
        android:autofillHints="username"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/primary_blue"
    />

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/new_course_description"
        app:layout_constraintTop_toBottomOf="@id/new_course_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/title_margin"
        android:layout_marginLeft="@dimen/title_margin"
        android:layout_marginRight="@dimen/title_margin"
        android:inputType="text"
        android:hint="@string/course_description"
        android:autofillHints="name"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/primary_blue"
    />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/assign_course"
        app:layout_constraintTop_toBottomOf="@id/new_course_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/title_margin"
        android:layout_marginLeft="@dimen/double_margin"
        android:layout_marginRight="@dimen/double_margin"
        android:text="@string/assign_course"
        android:textSize="@dimen/main_text_size"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary_blue"
    />

</androidx.constraintlayout.widget.ConstraintLayout>