<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".LoginFragment"
        android:background="@color/white"
    >

        <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/text_edit_height"
            android:id="@+id/username_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/title_margin"
            android:layout_marginLeft="@dimen/title_margin"
            android:layout_marginRight="@dimen/title_margin"
            android:inputType="text"
            android:hint="@string/username_hint"
            android:autofillHints="username"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/primary_blue"
        />

        <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/text_edit_height"
            android:id="@+id/password_login"
            app:layout_constraintTop_toBottomOf="@+id/username_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/title_margin"
            android:layout_marginLeft="@dimen/title_margin"
            android:layout_marginRight="@dimen/title_margin"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:autofillHints="password"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            android:textCursorDrawable="@null"
            android:backgroundTint="@color/primary_blue"
        />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/password_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/title_margin"
            android:layout_marginLeft="@dimen/double_margin"
            android:layout_marginRight="@dimen/double_margin"
            android:text="@string/login_button"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary_blue"
        />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="@dimen/double_margin"
            android:layout_marginRight="@dimen/double_margin"
            android:text="@string/register_button"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary_blue"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>